Fix poor title scaling on mobile

--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ body {
 	padding: 0;
 	font-size: 4em;
 	text-align: center;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .mainInfo-Body {
@@ -82,6 +84,12 @@ p {
 
 @media only screen and (max-width: 600px) {
 	.mainInfo-Name {
-		font-size: 3.5em;
+		width: 100%;
+		font-size: 100%;
+	}
+
+	.mainInfo-Name {
+		/* Hooray, magic numbers! */
+		font-size: 11.3vw;
 	}
 }
